Per guild api authentication